@@ -1,3 +1,8 @@
+2008-03-26  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>
+
+	* libopenvas/hlst.c: replace inlusion of "includes.h" by
+	respective single includes.
+
 2008-03-24  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>
 
 	Made openvas-libraries compile after a "make clean".
